--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,22 @@ services:
     ports:
       - "3306:3306"
 
+  api:
+    container_name: firemap_api
+    build:
+      context: .
+      dockerfile: ./api/Dockerfile
+    command: "api"
+    ports:
+      - "8081:8081"
+    environment:
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - HTTP_SERVER_PORT=8081
+
   migrations:
     container_name: firemap_migrations
     build:
