--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,5 +44,15 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
 
+  nginx:
+    container_name: firemap_nginx
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
+    ports:
+      - "80:8080"
+    environment:
+      API_HOST: ${API_HOST}
+
 volumes:
   db_data:
