--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -22,9 +22,9 @@ server {
         rewrite ^/api(.*)$ $1 break;
         proxy_pass ${API_HOST};
 
-        proxy_cache api_cache;
-        proxy_cache_methods GET HEAD;
-        proxy_cache_valid 200 201 202 203 204 205 206 207 208 226 1m;
-        add_header X-Cache-Status $upstream_cache_status;
+        # proxy_cache api_cache;
+        # proxy_cache_methods GET HEAD;
+        # proxy_cache_valid 200 201 202 203 204 205 206 207 208 226 1m;
+        # add_header X-Cache-Status $upstream_cache_status;
     }
 }
