--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -20,6 +20,20 @@ server {
         alias /usr/share/nginx/html/img/;
     }
 
+    location /ws {
+        proxy_pass ${API_HOST};
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
+    }
+
     location ~* ^/api/(.*)$ {
         limit_req zone=api_limit burst=20 nodelay;
 
