--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,7 @@ services:
       - DB_PORT=${DB_PORT}
       - DB_NAME=${DB_NAME}
       - HTTP_SERVER_PORT=8081
+      - CLOUDINARY_URL=${CLOUDINARY_URL}
 
   migrations:
     container_name: firemap_migrations
