--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,10 @@ DB_PORT=3306
 #nginx
 API_HOST=host.docker.internal:8081
 
-
+#IMAGE
 CLOUDINARY_URL=cloudinary://123:OTd@asdkioc8l
+
+#GEOIP
+GEO_IP_URL=http://test.com
+GEO_IP_KEY=123
+
