--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,8 @@ services:
       - DB_NAME=${DB_NAME}
       - HTTP_SERVER_PORT=8081
       - CLOUDINARY_URL=${CLOUDINARY_URL}
+      - GEO_IP_URL=${GEO_IP_URL}
+      - GEO_IP_KEY=${GEO_IP_KEY}
 
   migrations:
     container_name: firemap_migrations
